modality and scaffolding

--- a/src/popup.html
+++ b/src/popup.html
@@ -5,8 +5,9 @@
   <title></title>
 </head>
 <body>
+  <img src="img/icon-128.png" align="left">
   <h1>NeoLink</h1>
-  <img src="img/icon-128.png">
+  <div id="nav"></div>
   <div id="content"></div>
 </body>
 </html>
