--- a/src/html/balance.html
+++ b/src/html/balance.html
@@ -1,4 +1,5 @@
 <h3> Balance </h3>
-<button id="getBalance">Get Balance</button>
+Address: <input type='text' id='balanceAddress'/>
+<button id="getBalanceButton">Get Balance</button>
 <br><br>
 <div id="modalContent"></div>
