--- a/src/html/transactions.html
+++ b/src/html/transactions.html
@@ -1,3 +1,4 @@
 <h3> Transactions </h3>
-<button id="getTxs">List</button>
+Address: <input type='text' id='txsAddress'/>
+<button id="getTxsButton">List</button>
 <div id="modalContent"></div>
