--- a/src/html/login.html
+++ b/src/html/login.html
@@ -1,4 +1,9 @@
 <h3> Login </h3>
-<button id="Login">Login</button>
+Encrypted WIF: <br>
+<input type='text' id='loginWif'/><br>
+Passphrase: <br>
+<input type='password' id='loginWifPassphrase'/>
+<br><br>
+<button id="loginButton">Login</button>
 <br><br>
 <div id="modalContent"></div>
