--- a/src/html/loggedIn.html
+++ b/src/html/loggedIn.html
@@ -1,3 +1,4 @@
 <h3> You are logged in: </h3>
+<button id="logoutButton">Log Out</button><br><br>
 
-<div id="modalContent"></div>
+<div id="loginModalContent"></div>
