--- a/src/html/login.html
+++ b/src/html/login.html
@@ -6,4 +6,4 @@ Passphrase: <br>
 <br><br>
 <button id="loginButton">Login</button>
 <br><br>
-<div id="modalContent"></div>
+<div id="loginModalContent"></div>
