--- a/src/html/main_nav.html
+++ b/src/html/main_nav.html
@@ -1,6 +1,8 @@
+<button id="homeNav">Home</button>
+<button id="sendNav">Send</button>
 <button id="txsNav">Transactions</button>
 <button id="balanceNav">Balance</button>
-<button id="loginNav">Login</button>
 <button id="createWalletNav">Create Wallet</button>
 <button id="importWalletNav">Import Wallet</button>
 <button id="exportWalletNav">Export Wallet</button>
+<button id="configNav">Config</button>
