--- a/src/popup.html
+++ b/src/popup.html
@@ -7,6 +7,7 @@
 <body>
   <img src="img/icon-128.png" align="left">
   <h1>NeoLink</h1>
+  <div id="networkStatus"></div><br>
   <div id="nav"></div>
   <div id="content"></div>
 </body>
