Fixed labels so string comparison for asset type works

--- a/src/html/send.html
+++ b/src/html/send.html
@@ -4,8 +4,8 @@ Amount: <br><input type='text' id='sendAmount'/><br>
 Type: <br>
 <!-- <input type='text' id='sendType'/> -->
 <select id='sendType'>
-  <option value="NEO">Neo</option>
-  <option value="GAS">Gas</option>
+  <option value="Neo">Neo</option>
+  <option value="Gas">Gas</option>
 </select>
 <br><br>
 <button id="sendButton">Send</button>
