CSS initial styling

--- a/src/html/balance.html
+++ b/src/html/balance.html
@@ -1,5 +1,7 @@
+<div class="content">
 <h3> Balance </h3>
-Address: <input type='text' id='balanceAddress'/>
+Address: <input style="address" type='text' id='balanceAddress'/>
 <button id="getBalanceButton">Get Balance</button>
 <br><br>
 <div id="modalContent"></div>
+</div>
