--- a/src/html/config.html
+++ b/src/html/config.html
@@ -1,5 +1,7 @@
+<div class="content">
 <h3> Configuration </h3>
 <input id="configUseLoggedInAddress" type="checkbox"><br><br>
 <button id="updateConfigButton">Update</button>
 <br><br>
 <div id="modalContent"></div>
+</div>
