--- a/src/html/create_wallet.html
+++ b/src/html/create_wallet.html
@@ -1,4 +1,6 @@
+<div class="content">
 <h3> Create Wallet </h3>
 <button id="createWallet">Create Wallet</button>
 <br><br>
 <div id="modalContent"></div>
+</div>
