--- a/src/html/export_wallet.html
+++ b/src/html/export_wallet.html
@@ -1,4 +1,6 @@
+<div class="content">
 <h3> Export Wallet </h3>
 <button id="exportWallet">Export Wallet</button>
 <br><br>
 <div id="modalContent"></div>
+</div>
