--- a/src/html/import_wallet.html
+++ b/src/html/import_wallet.html
@@ -1,4 +1,6 @@
+<div class="content">
 <h3> Import Wallet </h3>
 <button id="importWallet">Import Wallet</button>
 <br><br>
 <div id="modalContent"></div>
+</div>
