--- a/src/html/loggedIn.html
+++ b/src/html/loggedIn.html
@@ -1,4 +1,6 @@
+<div class="content">
 <h3> You are logged in: </h3>
 <button id="logoutButton">Log Out</button><br><br>
 
 <div id="loginModalContent"></div>
+</div>
