--- a/src/html/login.html
+++ b/src/html/login.html
@@ -1,9 +1,11 @@
+<div class="content">
 <h3> Login </h3>
 Encrypted WIF: <br>
-<input type='text' id='loginWif'/><br>
+<input class="wif" type='text' id='loginWif'/><br>
 Passphrase: <br>
-<input type='password' id='loginWifPassphrase'/>
+<input class="wif" type='password' id='loginWifPassphrase'/>
 <br><br>
 <button id="loginButton">Login</button>
 <br><br>
 <div id="loginModalContent"></div>
+</div>
