--- a/src/html/main_nav.html
+++ b/src/html/main_nav.html
@@ -1,3 +1,4 @@
+<div class="vertical-menu">
 <button id="homeNav">Home</button>
 <button id="sendNav">Send</button>
 <button id="txsNav">Transactions</button>
@@ -6,3 +7,4 @@
 <button id="importWalletNav">Import Wallet</button>
 <button id="exportWalletNav">Export Wallet</button>
 <button id="configNav">Config</button>
+</div>
