--- a/src/html/transactions.html
+++ b/src/html/transactions.html
@@ -1,4 +1,6 @@
+<div class="content">
 <h3> Transactions </h3>
 Address: <input type='text' id='txsAddress'/>
 <button id="getTxsButton">List</button>
 <div id="modalContent"></div>
+</div>
