--- a/src/html/send.html
+++ b/src/html/send.html
@@ -1,13 +1,15 @@
+<div class="content">
 <h3> Send </h3>
 Address: <br><input type='text' id='sendAddress'/><br>
 Amount: <br><input type='text' id='sendAmount'/><br>
 Type: <br>
 <!-- <input type='text' id='sendType'/> -->
 <select id='sendType'>
-  <option value="NEO">Neo</option>
-  <option value="GAS">Gas</option>
+  <option value="Neo">Neo</option>
+  <option value="Gas">Gas</option>
 </select>
 <br><br>
 <button id="sendButton">Send</button>
 <br><br>
 <div id="modalContent"></div>
+</div>
