--- a/src/popup.html
+++ b/src/popup.html
@@ -5,9 +5,9 @@
   <title></title>
 </head>
 <body>
-  <img src="img/icon-128.png" align="left">
-  <h1>NeoLink</h1>
-  <div id="networkStatus"></div><br>
+  <img class="logo" src="img/icon-128.png" hspace="25" align="left" height="50" width="50">
+  <h1 class="neoLink">NeoLink</h1>
+  <div class="netStat" id="networkStatus"></div>
   <div id="nav"></div>
   <div id="content"></div>
 </body>
