--- a/src/html/config.html
+++ b/src/html/config.html
@@ -1,6 +1,6 @@
 <div class="content">
 <h3> Configuration </h3>
-<input id="configUseLoggedInAddress" type="checkbox"><br><br>
+<input id="configUseLoggedInAddress" type="checkbox">Use Default Login Address<br><br>
 <button id="updateConfigButton">Update</button>
 <br><br>
 <div id="modalContent"></div>
