--- a/src/html/mainNav.html
+++ b/src/html/mainNav.html
@@ -1,6 +1,7 @@
 <div class="vertical-menu">
 <button id="homeNav">Home</button>
 <button id="sendNav">Send</button>
+<button id="invokeNav">Invoke contract</button>
 <button id="txsNav">Transactions</button>
 <button id="balanceNav">Balance</button>
 <button id="createWalletNav">Create Wallet</button>
