temp update for default asset type

--- a/src/html/invokeContract.html
+++ b/src/html/invokeContract.html
@@ -8,7 +8,7 @@ Type: <br>
 <!-- <input type='text' id='sendType'/> -->
 <select id='assetType'>
   <option value="Neo">Neo</option>
-  <option value="Gas">Gas</option>
+  <option value="Gas" selected="selected">Gas</option>
 </select>
 <br><br>
 <button id="invokeContractButton">Invoke</button>
