--- a/src/html/testInvokeContract.html
+++ b/src/html/testInvokeContract.html
@@ -1,5 +1,5 @@
 <div class="content">
-<h3> Send </h3>
+<h3> Test Invoke Contract </h3>
 Operation: <br><input type='text' id='operation'/><br>
 Argument: <br><input type='text' id='args'/><br>
 Script Hash: <br><input type='text' id='scriptHash'/><br>
