--- a/src/html/mainNav.html
+++ b/src/html/mainNav.html
@@ -2,6 +2,7 @@
 <button id="homeNav">Home</button>
 <button id="sendNav">Send</button>
 <button id="testInvokeNav">Test Invoke Contract</button>
+<button id="sendInvokeNav">Send Invoke Contract</button>
 <button id="txsNav">Transactions</button>
 <button id="balanceNav">Balance</button>
 <button id="createWalletNav">Create Wallet</button>
