--- a/src/html/testInvokeContract.html
+++ b/src/html/testInvokeContract.html
@@ -6,7 +6,7 @@ Argument Two (optional): <br><input type='text' id='arg2'/><br>
 Script Hash: <br><input type='text' id='scriptHash'/><br>
 
 <br><br>
-<button id="invokeContractButton">Invoke</button>
+<button id="testInvokeContractButton">Invoke</button>
 <br><br>
 <div id="modalContent"></div>
 </div>
