--- a/src/html/mainNav.html
+++ b/src/html/mainNav.html
@@ -1,8 +1,8 @@
 <div class="vertical-menu">
 <button id="homeNav">Home</button>
 <button id="sendNav">Send</button>
-<button id="testInvokeNav">Test Invoke Contract</button>
-<button id="sendInvokeNav">Send Invoke Contract</button>
+<button id="testInvokeNav">Test Invoke</button>
+<button id="sendInvokeNav">Send Invoke</button>
 <button id="txsNav">Transactions</button>
 <button id="balanceNav">Balance</button>
 <button id="createWalletNav">Create Wallet</button>
